# serverless-from-scratch

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
app/: config.py  main.py
infrastructure/envs/global/: .terraform.lock.hcl  aws-apigateway.tf  aws-ecr.tf  aws-iam.tf  circle-ci.tf  dns.tf  terraform.tf  variables.tf
infrastructure/envs/pipeline/: README.md  aws-apigateway.tf  aws-cloudwatch.tf  aws-lambda.tf  terraform.tf  variables.tf
tests/: conftest.py  test_main.py
