
[project]
name = "serverless-from-scratch"
version = "0.1.0"
description = "Serverless from scratch example with Terraform and python"
authors = [
    {name = "Dom Weldon", email = "dominic.weldon@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.2",
    "mangum>=0.17.0",
    "pydantic>=1.10.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line_length = 79

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
    "uvicorn>=0.22.0",
    "bpython>=0.24",
    "pytest>=7.3.1",
    "httpx>=0.24.1",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
